// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValuePair schema (0) match fails for invalid config -> empty: empty 1`] = `
"expect(received).toMatchSchema(schema)

received
  must have required property 'Key'
    Path:     KeyValuePair.schema.json#/required
  must have required property 'Value'
    Path:     KeyValuePair.schema.json#/required
"
`;

exports[`KeyValuePair schema (1) match fails for invalid config -> empty key: empty key 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Key must have required property 'Name'
    Received: <object> {}
    Path:     KeyValuePair.schema.json#/required
  /Key must have required property 'NamespaceIndex'
    Received: <object> {}
    Path:     KeyValuePair.schema.json#/required
"
`;

exports[`KeyValuePair schema (2) match fails for invalid config -> invalid key: invalid key 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Key must have required property 'NamespaceIndex'
    Received: <object> {\\"Name\\":\\"\\",\\"NameSpaceIndex\\":0}
    Path:     KeyValuePair.schema.json#/required
  must NOT have additional properties, but found 'NameSpaceIndex'
    Expected: <boolean> false
    Received: <object> {\\"Name\\":\\"\\",\\"NameSpaceIndex\\":0}
    Path:     KeyValuePair.schema.json#/additionalProperties
"
`;

exports[`KeyValuePair schema (3) match fails for invalid config -> invalid key property value: invalid key property value 1`] = `
"expect(received).toMatchSchema(schema)

received
  /Key/NamespaceIndex must be integer
    Received: <string> 0
    Path:     KeyValuePair.schema.jsondataTypes/uint16.schema.json/type
"
`;

exports[`KeyValuePair schema (4) match fails for invalid config -> additional properties: additional properties 1`] = `
"expect(received).toMatchSchema(schema)

received
  must NOT have additional properties, but found 'bar'
    Expected: <boolean> false
    Path:     KeyValuePair.schema.json#/additionalProperties
  must NOT have additional properties, but found 'foo'
    Expected: <boolean> false
    Received: <object> {\\"Name\\":\\"\\",\\"NamespaceIndex\\":0,\\"foo\\":\\"bar\\"}
    Path:     KeyValuePair.schema.json#/additionalProperties
"
`;
